@@ -2,6 +2,8 @@
 
 	* Add "--easy" flag to command line.
 
+	* Add "--manual" flah to command line.
+
 2003-06-15 Simon Waters <Simon@wretched.demon.co.uk>      
 
 	* const declaration for progname removed to 
